force-app/main/default/objects/Notification_Status__c/Notification_Status__c.object-meta.xml
<CustomObject>
    <label>Notification Status</label>
    <nameField>
        <displayFormat>NS-{0000}</displayFormat>
        <label>Notification Status Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Notification Status</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>