force-app/main/default/objects/Notification_Status__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Notification Status</relationshipLabel>
    <relationshipName>Notification_Status</relationshipName>
    <type>Lookup</type>
</CustomField>