force-app/main/default/objects/Notification_Status__c/fields/Reviewer__c.field-meta.xml
<CustomField>
    <fullName>Reviewer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reviewer</label>
    <referenceTo>Reviewer__c</referenceTo>
    <relationshipLabel>Notification Status</relationshipLabel>
    <relationshipName>Notification_Status</relationshipName>
    <type>Lookup</type>
</CustomField>